--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -7,8 +7,8 @@
 
 :uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 
-:uri-rel-file-base: link:{uri-repo}/blob/v12docs
-:uri-rel-tree-base: link:{uri-repo}/tree/v12docs
+:uri-rel-file-base: link:{uri-repo}/blob/v12
+:uri-rel-tree-base: link:{uri-repo}/tree/v12
 :uri-docs: {uri-rel-file-base}/docs
 
 :uri-calico: https://www.projectcalico.org/
