--- a/docs/topology.adoc
+++ b/docs/topology.adoc
@@ -5,8 +5,8 @@
 :bl: pass:[ +]
 :uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 
-:uri-rel-file-base: link:{uri-repo}/blob/v12docs
-:uri-rel-tree-base: link:{uri-repo}/tree/v12docs
+:uri-rel-file-base: link:{uri-repo}/blob/v12
+:uri-rel-tree-base: link:{uri-repo}/tree/v12
 :uri-docs: {uri-rel-file-base}/docs
 :uri-networks-subnets-cidr: https://erikberg.com/notes/networks.html
 :uri-oci-configure-cli: https://docs.cloud.oracle.com/iaas/Content/API/SDKDocs/cliinstall.htm#SettinguptheConfigFile
