--- a/README.adoc
+++ b/README.adoc
@@ -2,20 +2,11 @@
 
 :idprefix:
 :idseparator: -
-ifndef::env-github[:icons: font]
-ifdef::env-github[]
-:status:
-:outfilesuffix: .adoc
-:caution-caption: :fire:
-:important-caption: :exclamation:
-:note-caption: :paperclip:
-:tip-caption: :bulb:
-:warning-caption: :warning:
-endif::[]
+
 :uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 
-:uri-rel-file-base: link:{uri-repo}/blob/v12docs
-:uri-rel-tree-base: link:{uri-repo}/tree/v12docs
+:uri-rel-file-base: link:{uri-repo}/blob/v12
+:uri-rel-tree-base: link:{uri-repo}/tree/v12
 
 :uri-docs: {uri-rel-file-base}/docs
 
