--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -74,12 +74,12 @@ cp terraform.tfvars.example terraform.tfvars
 
 Enter the values for the following parameters in the terraform.tfvars file:
 
-- api_fingerprint
-- api_private_key_path
-- compartment_name
-- compartment_ocid
-- tenancy_ocid
-- user_ocid
+* api_fingerprint
+* api_private_key_path
+* compartment_name
+* compartment_ocid
+* tenancy_ocid
+* user_ocid
 
 e.g.
 
@@ -107,8 +107,8 @@ ssh_public_key_path = "~/.ssh/id_rsa.pub"
 
 The 2 OCI parameters here mainly concern:
 
-1. the label_prefix: this will append a string to the name of every resource created
-2. the region: this allows you to select the region where you want the OKE cluster deployed
+* the label_prefix: this will append a string to the name of every resource created
+* the region: this allows you to select the region where you want the OKE cluster deployed
 
 e.g.
 
@@ -127,8 +127,15 @@ The networking parameters concern the VCN and the subnets network configuration 
 
 You can leave most of the default options. However, you may want to change the following 2 parameters:
 
-. vcn_dns_name: this is the internal dns domain for resources created
-. vcn_name: this is the name of the vcn that will be appended to the label prefix
+* vcn_dns_name: this is the internal dns domain for resources created
+* vcn_name: this is the name of the vcn that will be appended to the label prefix
+
+****
+If you need to change the default VCN's CIDR, note the following:
+
+* The CIDR block you specify for the VCN *must not* overlap with the CIDR block you specify for the Kubernetes services.
+* The CIDR blocks you specify for pods running in the cluster *must not* overlap with CIDR blocks you specify for worker node and load balancer subnets.
+****
 
 {uri-terraform-options}#oci-networking[Reference]
 
@@ -144,10 +151,18 @@ Read more about {uri-oci-instance-principal}[instance_principal].
 
 The OKE parameters concern mainly the following:
 
-. whether you want to deploy public or private worker nodes
-. whether you want to allow NodePort or ssh access to the worker nodes
-. Kubernetes options such as dashboard, networking and helm
-. size and topology of your cluster
+* whether you want to deploy public or private worker nodes
+* whether you want to allow NodePort or ssh access to the worker nodes
+* Kubernetes options such as dashboard, networking and helm
+* size and topology of your cluster
+* services and pods cidr blocks
+
+****
+If you need to change the default services and pods' CIDRs, note the following:
+
+* The CIDR block you specify for the VCN *must not* overlap with the CIDR block you specify for the Kubernetes services.
+* The CIDR blocks you specify for pods running in the cluster *must not* overlap with CIDR blocks you specify for worker node and load balancer subnets.
+****
 
 Refer to {uri-topology}[topology] for more thorough examples.
 
